--- a/distribute-system/distribute-datasource/pom.xml
+++ b/distribute-system/distribute-datasource/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>distribute-ratelimiter</artifactId>
+    <artifactId>distribute-datasource</artifactId>
 
 
 </project>
